have an issue trying to align the form center

--- a/assets/stylesheet.css
+++ b/assets/stylesheet.css
@@ -176,13 +176,14 @@ tr:nth-child(even) {
 }
 
 #sign-up div {
-    text-align: center;
+    display: block;
+
 }
 
-
 input {
-    padding: 5px 10px;
-    margin: 8px;
+    padding: 10px 10px;
+    display: block;
+    margin: 8px 0;
     box-sizing: border-box;
     border: 3px solid #DC851F;
     font-size: 20px;
@@ -195,8 +196,8 @@ input {
     border: 3px solid #DC851F;
     color: #DC851F;
     padding: 10px 15px;
-    font-size: 30px;
     background: transparent;
+    cursor: pointer;
 }
 
 
